--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2001-12-02  Richard Henderson  <rth@redhat.com>
 
+	* c-decl.c (duplicate_decls): Conditionalize DECL_SAVED_TREE copy.
+
+2001-12-02  Richard Henderson  <rth@redhat.com>
+
 	* rtl.h (mem_attrs): Rename decl to expr; adjust all users.
 	(MEM_EXPR): Rename from MEM_DECL; adjust all users.
 	* emit-rtl.c (set_mem_expr): Rename from set_mem_decl.
