* MAINTAINERS: Update mail address for config.* patches.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47536 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-03  Ben Elliston  <bje@redhat.com>
+
+	* MAINTAINERS: Update mail address for config.* patches.
+
 2001-11-27  DJ Delorie <dj@redhat.com>
 	    Zack Weinberg  <zack@codesourcery.com>
 
