--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-03  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* gcc.dg/vla-init-1.c: New test.
+
 2001-12-01  Geoff Keating  <geoffk@redhat.com>
 
 	* gcc.c-torture/compile/structs.c: New testcase from GDB.
