--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,10 @@
+2001-12-03  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR g++/3381
+	* parse.y (named_complex_class_head_sans_basetype): Add new
+	reduction.
+	* Make-lang.in (parse.c): Adjust expected conflict count.
+
 2001-12-03  Jason Merrill  <jason@redhat.com>
 
 	* class.c (finish_vtbls): Fill in BINFO_VPTR_FIELD in the
