--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-03  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.dg/other/scope1.C: New test.
+	* g++.dg/template/explicit-instantiation.C: Remove XFAIL
+
 2001-12-03  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* gcc.dg/vla-init-1.c: New test.
