--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-03  Mumit Khan  <khan@nanotech.wisc.edu>
+
+	PR c++/3394
+	*  decl.c (xref_basetypes): Handle attributes between 
+	  'class' and name.
+
 2001-12-03  Nathan Sidwell  <nathan@codesourcery.com>
 
 	PR g++/3381
