* i386.md (movabsqi*): Use 'b' prefix instead of 'q'.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47548 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -2221,9 +2221,9 @@
 	(match_operand:QI 1 "nonmemory_operand" "a,er,i"))]
   "TARGET_64BIT"
   "@
-   movabs{q}\t{%1, %P0|%P0, %1}
-   mov{q}\t{%1, %a0|%a0, %1}
-   movabs{q}\t{%1, %a0|%a0, %1}"
+   movabs{b}\t{%1, %P0|%P0, %1}
+   mov{b}\t{%1, %a0|%a0, %1}
+   movabs{b}\t{%1, %a0|%a0, %1}"
   [(set_attr "type" "imov")
    (set_attr "modrm" "0,*,*")
    (set_attr "length_address" "8,0,0")
@@ -2236,8 +2236,8 @@
         (mem:QI (match_operand:DI 1 "x86_64_movabs_operand" "i,r")))]
   "TARGET_64BIT"
   "@
-   movabs{q}\t{%P1, %0|%0, %P1}
-   mov{q}\t{%a1, %0|%0, %a1}"
+   movabs{b}\t{%P1, %0|%0, %P1}
+   mov{b}\t{%a1, %0|%0, %a1}"
   [(set_attr "type" "imov")
    (set_attr "modrm" "0,*")
    (set_attr "length_address" "8,0")
