--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Mon Dec  3 13:52:19 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* i386.md (movabsqi*): Use 'b' prefix instead of 'q'.
+
 2001-12-02  Zack Weinberg  <zack@codesourcery.com>
 
 	* config/rs6000/rs6000.h (MASK_ALTIVEC_ABI,
