--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-03  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/20011130-1.c: New test.
+
 2001-12-03  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.dg/other/scope1.C: New test.
