--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,18 @@
+Mon Dec  3 16:16:37 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* gcse.c (delete_null_pointer_checks_1): Do not use delelete_list;
+	call purge_dead_edges after removing.
+	(delete_null_pointer_checks): Do not handle delete_list.
+
+	* cfgbuild.c (inside_basic_block_p, control_flow_insn_p): Break out from ...
+	(count_basic_blocks): ... here.
+	(find_basic_blocks, find_bb_boundaries): Cleanup.
+
+	* stor-layout.c (fixup_signed_type, fixup_unsigned_type): Avoid
+	overflow for types greater then 2 * HOST_WIDE_INT.
+
+	* reload.c (find_reloads): Update the duplicates after swapingg.
+
 Mon Dec  3 13:52:19 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* i386.md (movabsqi*): Use 'b' prefix instead of 'q'.
