--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-03  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* typeck2.c: Remove leading capital from diagnostic messages, as
+	per GNU coding standards.
+
 2001-12-03  Mumit Khan  <khan@nanotech.wisc.edu>
 
 	PR c++/3394
