--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,13 @@
+2001-12-03  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* expr.c: Remove leading capital from diagnostic messages, as
+	per GNU coding standards.
+	* jcf-io.c: Similarly.
+	* jcf-parse.c: Similarly.
+	* jv-scan.c: Similarly.
+	* jvspec.c: Similarly.
+	* mangle.c: Similarly.
+
 2001-12-02  Tang Ching-Hui  <nicholas@cs.nthu.edu.tw>
 	    Alexandre Petit-Bianco  <apbianco@redhat.com>
 
