* sem_ch12.adb: Minor reformatting
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47560 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-03   <dewar@gnat.com>
+
+	* sem_ch12.adb: Minor reformatting
+
 2001-12-03  Ed Schonberg <schonber@gnat.com>
 
 	* sem_ch12.adb (Inline_Instance_Body): Use Save_Scope_Stack and 
