--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-03  Robert Dewar <dewar@gnat.com>
+
+	* prj-proc.adb: Minor reformatting
+	
+	* make.adb: Minor reformatting
+
 2001-12-03  Geert Bosch <bosch@gnat.com>
 
  	* make.adb: Minor reformatting.
