* sinfo.ads: Minor reformatting. N_Freeze_Entity node does not         have Associated_Node.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47563 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,5 +1,10 @@
 2001-12-03  Robert Dewar <dewar@gnat.com>
 
+	* sinfo.ads: Minor reformatting. N_Freeze_Entity node does not 
+        have Associated_Node.
+
+2001-12-03  Robert Dewar <dewar@gnat.com>
+
 	* prj-proc.adb: Minor reformatting
 	
 	* make.adb: Minor reformatting
