PR c/4988 	* (process_command): Don't add a preprocessor option for 	--help and --target-help; cc1 is enough.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47565 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2001-12-03  Neil Booth  <neil@daikokuya.demon.co.uk>
 
+	PR c/4988
+	* (process_command): Don't add a preprocessor option for
+	--help and --target-help; cc1 is enough.
+
+2001-12-03  Neil Booth  <neil@daikokuya.demon.co.uk>
+
 	* c-decl.c (grokdeclarator): Use ISO word.
 	* cppinit.c: Remove leading capital from diagnostic messages, as
 	per GNU coding standards.
