--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-03  Laurent Guerby  <guerby@acm.org>
+
+	* config.sub: Update to version 1.232 on subversion.
+
 2001-12-03  Ben Elliston  <bje@redhat.com>
 
 	* MAINTAINERS: Update mail address for config.* patches.
