* emit-rtl.c (gen_lowpart_common): Avoid unwanted sign-extension 	of array elements.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47568 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-03  Geoff Keating  <geoffk@redhat.com>
+
+	* emit-rtl.c (gen_lowpart_common): Avoid unwanted sign-extension
+	of array elements.
+
 2001-12-03  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	PR c/4988
