--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-03  Per Bothner  <per@bothner.com>
+
+	* jcf.h:  Fix obvious typo in comment.
+	* typeck.c (build_null_signature):  Add comment.
+
 2001-12-03  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* expr.c: Remove leading capital from diagnostic messages, as
