* config/i386/i386.md (prefetch): Rename as prefetch_sse to avoid 	  conflicts with new generic prefetch functionality. 	* config/i386/i386.c (ix86_expand_builtin): Use new name for 	  prefetch_sse.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47577 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -81,7 +81,7 @@
 ;; 32 This is a `maskmov' operation.
 ;; 33 This is a `movmsk' operation.
 ;; 34 This is a `non-temporal' move.
-;; 35 This is a `prefetch' operation.
+;; 35 This is a `prefetch' (SSE) operation.
 ;; 36 This is used to distinguish COMISS from UCOMISS.
 ;; 37 This is a `ldmxcsr' operation.
 ;; 38 This is a forced `movaps' instruction (rather than whatever movti does)
@@ -19333,7 +19333,7 @@
   [(set_attr "type" "sse")
    (set_attr "memory" "unknown")])
 
-(define_insn "prefetch"
+(define_insn "prefetch_sse"
   [(unspec [(match_operand:SI 0 "address_operand" "p")
 	    (match_operand:SI 1 "immediate_operand" "n")] 35)]
   "TARGET_SSE || TARGET_3DNOW_A"
