* Makefile.in: Rebuilt with automake-gcj.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47593 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-04  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* Makefile.in: Rebuilt with automake-gcj.
+
 2001-12-03  Tom Tromey  <tromey@redhat.com>
 
 	* defineclass.cc (handleMethodsEnd): Invoke verifier here...
