* function.c (assign_parms): Set last_named only for last named 	argument.
	* g++.dg/other/stdarg1.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47601 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-04  Jakub Jelinek  <jakub@redhat.com>
+
+	* function.c (assign_parms): Set last_named only for last named
+	argument.
+
 2001-12-04  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* doc/install.texi: Use the GFDL.  Include years from old install
