cp: 	PR g++/164 	* init.c (sort_base_init): Allow binfos to be directly specified. 	* method.c (do_build_copy_constructor): Explicitly convert to the 	base instance. 	(do_build_assign_ref): Likewise. testsuite: 	* g++.dg/inherit/base1.C: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47603 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,11 @@
+2001-12-04  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR g++/164
+	* init.c (sort_base_init): Allow binfos to be directly specified.
+	* method.c (do_build_copy_constructor): Explicitly convert to the
+	base instance.
+	(do_build_assign_ref): Likewise.
+
 2001-12-03  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* decl.c (xref_basetypes): Don't use C99 construct in tag_code
