--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-04  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.dg/inherit/base1.C: New test.
+
 2001-12-04  Jakub Jelinek  <jakub@redhat.com>
 
 	* g++.dg/other/stdarg1.C: New test.
