--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,9 @@
 2001-12-04  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* pt.c (end_template_parm_list): Clear TREE_CHAIN of each parm.
+
+2001-12-04  Nathan Sidwell  <nathan@codesourcery.com>
+
 	PR g++/164
 	* init.c (sort_base_init): Allow binfos to be directly specified.
 	* method.c (do_build_copy_constructor): Explicitly convert to the
